完成了SC功能（暂时只能减少）

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "ret": 1,
     "apiver": 9,
     "name": "Dice!",
-    "version": "3.0.0alpha w20191203",
+    "version": "3.0.0alpha y20200528",
     "version_id": 1001,
     "author": "w4123溯洄",
     "description": "跑团用掷骰机器人",
