--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -1,55 +1,56 @@
-{
-    "environments": [
+﻿{
+  "environments": [
+    {
+      "VCPKG_ROOT": "${projectDir}\\vcpkg",
+      "VCPKG_CMAKE": "${env.VCPKG_ROOT}\\scripts\\buildsystems\\vcpkg.cmake",
+      "VCPKG_TRIPLET": "x86-windows-static-custom"
+    }
+  ],
+  "configurations": [
+    {
+      "name": "Debug",
+      "generator": "Visual Studio 16 2019",
+      "configurationType": "Debug",
+      "inheritEnvironments": [ "msvc_x86" ],
+      "buildRoot": "${projectDir}\\build\\${name}",
+      "cmakeCommandArgs": "-T v142 -DCMAKE_BUILD_TYPE=${name}",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "variables": [
         {
-            "VCPKG_ROOT": "${projectDir}\\vcpkg",
-            "VCPKG_CMAKE": "${env.VCPKG_ROOT}\\scripts\\buildsystems\\vcpkg.cmake",
-            "VCPKG_TRIPLET": "x86-windows-static-custom"
-        }
-    ],
-    "configurations": [
-        {
-            "name": "Debug",
-            "generator": "Visual Studio 15 2017",
-            "configurationType": "Debug",
-            "inheritEnvironments": [
-                "msvc_x86"
-            ],
-            "buildRoot": "${projectDir}\\build\\${name}",
-            "cmakeCommandArgs": "-T v141 -DCMAKE_BUILD_TYPE=${name}",
-            "buildCommandArgs": "",
-            "ctestCommandArgs": "",
-            "variables": [
-                {
-                    "name": "CMAKE_TOOLCHAIN_FILE",
-                    "value": "${env.VCPKG_CMAKE}"
-                },
-                {
-                    "name": "VCPKG_TARGET_TRIPLET",
-                    "value": "${env.VCPKG_TRIPLET}"
-                }
-            ]
+          "name": "CMAKE_TOOLCHAIN_FILE",
+          "value": "${env.VCPKG_CMAKE}",
+          "type": "STRING"
         },
         {
-            "name": "Release",
-            "generator": "Visual Studio 15 2017",
-            "configurationType": "Release",
-            "inheritEnvironments": [
-                "msvc_x86"
-            ],
-            "buildRoot": "${projectDir}\\build\\${name}",
-            "cmakeCommandArgs": "-T v141 -DCMAKE_BUILD_TYPE=${name}",
-            "buildCommandArgs": "",
-            "ctestCommandArgs": "",
-            "variables": [
-                {
-                    "name": "CMAKE_TOOLCHAIN_FILE",
-                    "value": "${env.VCPKG_CMAKE}"
-                },
-                {
-                    "name": "VCPKG_TARGET_TRIPLET",
-                    "value": "${env.VCPKG_TRIPLET}"
-                }
-            ]
+          "name": "VCPKG_TARGET_TRIPLET",
+          "value": "${env.VCPKG_TRIPLET}",
+          "type": "STRING"
         }
-    ]
+      ]
+    },
+    {
+      "name": "Release",
+      "generator": "Visual Studio 16 2019",
+      "configurationType": "Release",
+      "inheritEnvironments": [ "msvc_x86" ],
+      "buildRoot": "${projectDir}\\build\\${name}",
+      "cmakeCommandArgs": "-T v142 -DCMAKE_BUILD_TYPE=${name}",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "variables": [
+        {
+          "name": "CMAKE_TOOLCHAIN_FILE",
+          "value": "${env.VCPKG_CMAKE}",
+          "type": "STRING"
+        },
+        {
+          "name": "VCPKG_TARGET_TRIPLET",
+          "value": "${env.VCPKG_TRIPLET}",
+          "type": "STRING"
+        }
+      ],
+      "intelliSenseMode": "windows-msvc-x86"
+    }
+  ]
 }
